|
Quick Lists
|
|
Bug ID:
|
6274276
|
|
Votes
|
0
|
|
Synopsis
|
java.lang.instrument JAR manifest processing does not remove spaces from class names
|
|
Category
|
java:serviceability
|
|
Reported Against
|
|
|
Release Fixed
|
7(b26)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
4459600
,
6679866
|
|
Submit Date
|
23-MAY-2005
|
|
Description
|
Manifest:
Manifest-Version: 1.0
Premain-Class: agent
Will fail saying that agent can't be found. I pounded my head against my screen for an hour trying to figure out what was wrong. Turns out it was looking for a class named " agent". The white-space processing for other JAR attributes should also be checked.
xxxxx@xxxxx 2005-05-23 01:30:24 GMT
The following new test will fail without the fix for this
bug in a promoted JDK:
java/lang/instrument/ManifestTest.sh
Posted Date : 2008-02-21 06:20:30.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
Yes, an annoying bug.
xxxxx@xxxxx 2005-05-23 08:17:40 GMT
Given that it is a long existing bug and may have deeper tenticals, better to fix it right in dolphin.
Posted Date : 2006-01-12 22:28:04.0
Ignoring leading whitespace and trailing whitespace for the
"value" part of the manifest entries is the safest change to
make. Embedded whitespace will be left as is.
Posted Date : 2008-02-21 05:08:48.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |