6274276: 3/2 java.lang.instrument JAR manifest processing does not remove spaces from class names

Attribute values should be extracted without leading or trailing whitespace.

Reviewed-by: ohair, sspitsyn